<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_toggle_logging"
        android:checkable="true"
        android:icon="@drawable/ic_action_stop"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_toggle_logging"
        android:titleCondensed="@string/action_start_title_condensed"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_login_or_logout"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_login"/>

    <item
        android:id="@+id/action_show_help_activity"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/action_show_help_activity"/>

</menu>
