<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dialog_server_config_desc"
            android:id="@+id/dialogServerConfigDesc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dialog_server_note"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialogServerConfigUrl"
            android:hint="http://www.domain.com/logger/"
            android:textSize="16dp"
            android:text="@string/dialog_server_default_url"/>
    </LinearLayout>
</LinearLayout>