<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accelerometerHeader"
            android:background="@android:color/holo_blue_light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accelerometerToggleVisibility"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/toggle_visibility"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/accelerometer_monitor"
                android:id="@+id/accelerometerTitle"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/accelerometerSpeedSpinner"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="2dp"
            android:id="@+id/accelerometerContainer"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:background="#fff1f1f1">

                <CheckBox
                    android:id="@+id/fragAccCheckBoxShowX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_axis_x"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <CheckBox
                    android:id="@+id/fragAccCheckBoxShowY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_axis_y"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <CheckBox
                    android:id="@+id/fragAccCheckBoxShowZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_axis_z"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="0dp"
                android:background="@android:color/white"
                android:id="@+id/accelerometerGraphHolder">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>